Clean up imports & deprecated code